--- a/DockerFile
+++ b/DockerFile
@@ -1,5 +1,20 @@
 FROM eclipse-temurin:17-jdk-alpine
-VOLUME /tmp
+
+# Set the working directory
+WORKDIR /app
+
+# Copy the Maven project files
+COPY pom.xml ./
+COPY src ./src
+
+# Build the application
+RUN ./mvnw package -DskipTests
+
+# Copy the JAR file
 COPY target/*.jar app.jar
-ENTRYPOINT ["java","-jar","/app.jar"]
+
+# Specify the entry point
+ENTRYPOINT ["java", "-jar", "/app.jar"]
+
+# Expose the port
 EXPOSE 1000
