--- a/DockerFile
+++ b/DockerFile
@@ -1,4 +1,8 @@
+# Use the JDK base image
 FROM eclipse-temurin:17-jdk-alpine
+
+# Install Maven
+RUN apk add --no-cache maven
 
 # Set the working directory
 WORKDIR /app
@@ -8,7 +12,7 @@ COPY pom.xml ./
 COPY src ./src
 
 # Build the application
-RUN ./mvnw package -DskipTests
+RUN mvn package -DskipTests
 
 # Copy the JAR file
 COPY target/*.jar app.jar
